<resources>
    <string name="app_name">ViHand Grade</string>
</resources>
